--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Open Graph meta tags for image -->
+    <meta property="og:image" content="../banner.jpeg">
+    <meta property="og:image:secure_url" content="../banner.jpeg">
+	<meta property="og:image:width" content="1280">
+	<meta property="og:image:height" content="818">
+
 
 </head>
 
