--- a/index.html
+++ b/index.html
@@ -2584,9 +2584,9 @@
 					</a>
 				</div><div class="col-md-4 col-sm-4">
 					<div class="feature-box">
-						<img src="images3/img273.DNG" class="img-responsive">				
+						<img src="images3/img273.jpeg" class="img-responsive">				
 					</div>
-					<a href="images3/img273.DNG" download>
+					<a href="images3/img273.jpeg" download>
 						<button>DOWNLOAD</button>
 					</a>
 				</div><div class="col-md-4 col-sm-4">
